--- a/aplication/src/styles/globals.css
+++ b/aplication/src/styles/globals.css
@@ -9,6 +9,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #111;
 }
 
 body {
@@ -31,3 +32,32 @@ a {
     color-scheme: dark;
   }
 }
+
+/*teste */
+  
+  .swiper {
+    width: 100%;
+    height: 40vh;
+    margin: 2%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    
+  
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+
