consmundo api dos animes por id

--- a/aplication/src/styles/globals.css
+++ b/aplication/src/styles/globals.css
@@ -25,6 +25,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -65,3 +66,4 @@ a {
   }
 
 
+ 
