--- a/aplication/src/styles/globals.css
+++ b/aplication/src/styles/globals.css
@@ -1,25 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: #111;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Inter', inter;
 }
 
 a {
@@ -28,42 +14,3 @@ a {
   cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
-
-  
-  .swiper {
-    width: 100%;
-    height: 40vh;
-    margin: 2%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
- 
-    
-  
-    /* Center slide text vertically */
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    color: black;
-    border-radius: 15px;
-    cursor: pointer;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-
- 
