--- a/aplication/src/styles/globals.css
+++ b/aplication/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
 
 
 * {
@@ -13,4 +14,4 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
-
+ 
