--- a/aplication/src/styles/globals.css
+++ b/aplication/src/styles/globals.css
@@ -10,6 +10,23 @@
   font-family: 'Inter', inter;
 }
 
+html,
+body,
+#root {
+  min-height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+#root {
+  flex: 1;
+  display: flex;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
